logs/train_549323.log
Setting up environment...
Starting training run...
  File "train.py", line 89
    print(f'Arguments: {args}')
                             ^
SyntaxError: invalid syntax
Training script finished.
